Разметил index.html, создал blank.html
blank.html - страница-заглушка, на нее ведут ссылки еще не сущуствующих страниц

--- a/index.html
+++ b/index.html
@@ -5,8 +5,217 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
+    <header>
+      <h1>Магазин строительных материалов и инструментов ТЕХНОМАРТ</h1>
+      <section>
+        <a href="#" class="logo">
+          <img src="" alt="ТЕХНОМАРТ" width="108" height="18">
+        </a>
+        <input type="search" name="search" id="search-field">
+        <a href="blank.html">Закладки</a>
+        <a href="blank.html">Корзина</a>
+        <a href="blank.html">Оформить заказ</a>
+      </section>
+      <section>
+        <p>Интернет-магазин <br>строительных материалов <br>и инструментов для ремонта</p>
+        <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+        <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+        <a href="blank.html">Войти</a>
+        <a href="blank.html">Регистрация</a>
+      </section>
+      <nav>
+        <ul>
+          <li><a href="#">Главная</a></li>
+          <li><a href="blank.html">Компания</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="blank.html">Новости</a></li>
+          <li><a href="blank.html">Спецпредложения</a></li>
+          <li><a href="blank.html">Доставка</a></li>
+          <li><a href="blank.html">Контакты</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h2>Каталог товаров</h2>
+        <div class="slider">
+          <h3>Перфораторы</h3>
+          <img src="https://via.placeholder.com/620x266" width="620" height="266" alt="Рабочий с перфоратором">
+          <p>Настоящие мужские игрушки</p>
+          <button type="button">Назад</button>
+          <button type="button" disabled>Вперед</button>
+          <div> <!--для слайдера, круглые точки внизу-->
+            <input type="radio" name="catalog-point" id="catalog-slide-1">
+            <label for="catalog-slide-1"></label>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+            <input type="radio" name="catalog-point" id="catalog-slide-2" checked>
+            <label for="catalog-slide-2"></label>
+          </div>
+          <a href="catalog.html">Открыть Каталог</a>
+        </div>
+        <ul>
+          <li>
+            <h3>Материалы</h3>
+            <p>NEW</p>
+            <a href="blank.html">На любой вкус</a>
+          </li>
+          <li>
+            <h3>Инструмент</h3>
+            <a href="blank.html">На все случаи</a>
+          </li>
+          <li>
+            <h3>Техника</h3>
+            <a href="blank.html">Для стройки</a>
+          </li>
+          <li>
+            <h3>Скидки 50%</h3>
+            <a href="blank.html">На 350 товаров</a>
+          </li>
+          <li>
+            <h3>Доставка</h3>
+            <a href="blank.html">Бесплатно</a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Популярные товары:</h2>
+        <a href="">Все популярные товары</a>
+        <ul>
+          <li>
+            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
+            <br>
+            <a href="blank.html">Перфоратор BOSCH BFG 9000</a>
+            <p><del>32500 Р.</del></p>
+            <a href="blank.html">25500 Р.</a>
+          </li>
+          <li>
+            <p>NEW</p>
+            <img src="https://via.placeholder.com/127x112" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+            <br>
+            <a href="blank.html">Перфоратор BOSCH BFG 3000</a>
+            <p><del>22500 Р.</del></p>
+            <a href="blank.html">15500 Р.</a>
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/144x128" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
+            <br>
+            <a href="blank.html">Перфоратор BOSCH BFG 6000</a>
+            <p><del>30500 Р.</del></p>
+            <a href="blank.html">25500 Р.</a>
+          </li>
+          <li>
+            <p>NEW</p>
+            <img src="https://via.placeholder.com/127x112" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
+            <br>
+            <a href="blank.html">Перфоратор BOSC HBFG 2000</a>
+            <a href="blank.html">12500 Р.</a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Популярные производители</h2>
+        <ul>
+          <li>
+            <a href="blank.html"><img src="https://via.placeholder.com/126x37" width="126" height="37" alt="BOSCH"></a>
+          </li>
+          <li>
+            <a href="blank.html"><img src="https://via.placeholder.com/123x40" width="123" height="40" alt="Makita"></a>
+          </li>
+          <li>
+            <a href="blank.html"><img src="https://via.placeholder.com/146x44" width="146" height="44" alt="DeWALT"></a>
+          </li>
+          <li>
+            <a href="blank.html"><img src="https://via.placeholder.com/200x76" width="200" height="76" alt="Интерскол"></a>
+          </li>
+          <li>
+            <a href="blank.html"><img src="https://via.placeholder.com/169x31" width="169" height="31" alt="Hitachi"></a>
+          </li>
+          <li>
+            <a href="blank.html"><img src="https://via.placeholder.com/121x73" width="121" height="73" alt="LG"></a>
+          </li>
+          <li>
+            <a href="blank.html"><img src="https://via.placeholder.com/151x98" width="151" height="98" alt="AEG"></a>
+          </li>
+          <li>
+            <a href="blank.html"><img src="https://via.placeholder.com/206x63" width="206" height="63" alt="metabo"></a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Сервисы</h2>
+        <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
+          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+        <div>
+          <input type="radio" name="service-point" id="service-slide-1" checked>
+          <label for="service-slide-1">Доставка</label>
 
+          <input type="radio" name="service-point" id="service-slide-2">
+          <label for="service-slide-2">Гарантия</label>
+
+          <input type="radio" name="service-point" id="service-slide-3">
+          <label for="service-slide-3">Кредит</label>
+        </div>
+        <h3>Доставка</h3>
+        <p>Мы с удовольствием доставим ваш товар прямо<br>
+          к вашему подъезду совершенно бесплатно!<br>
+          Ведь мы неплохо заработаем,<br>
+          поднимая его на ваш этаж!</p>
+      </section>
+      <section>
+        <h2>О компании</h2>
+        <h3>КОМПАНИЯ «Техномарт»</h3>
+        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для <br>ремонта и строительства не оставит равнодушными любителей сэкономить на <br>гастарбайтерах.
+        <br>
+        Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+        Техномарт работает со многими транспортными компаниями:</p>
+        <ul>
+          <li>
+            <a href="blank.html">Деловые линии</a>
+          </li>
+          <li>
+            <a href="blank.html">Автотрейдинг</a>
+          </li>
+          <li>
+            <a href="blank.html">ЖелДорЭкспедиция</a>
+          </li>
+        </ul>
+        <a href="blank.html">Подробнее о компании</a>
+        <h3>Контакты</h3>
+        <p>Вы можете забрать товар сами,<br>
+          заехав в наш офис:</p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.598942412363!2d30.32089461559019!3d59.938796869048495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1599822734057!5m2!1sru!2sru" width="300" height="158" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          <br>
+          <a href="">Заблудились? Напишите нам!</a>
+      </section>
+    </main>
+    <footer>
+      <h2>Компания ТЕХНОМАРТ</h2>
+      <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+      <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+      <ul>
+        <li><a href="blank.html">Компания</a></li>
+        <li><a href="blank.html">Новости</a></li>
+        <li><a href="blank.html">Каталог</a></li>
+        <li><a href="blank.html">Доставка</a></li>
+        <li><a href="blank.html">Контакты</a></li>
+      </ul>
+      <ul>
+        <li><a href="blank.html">Материалы</a></li>
+        <li><a href="blank.html">Техника</a></li>
+        <li><a href="blank.html">Инструмент</a></li>
+        <li><a href="blank.html">Спецпредложения</a></li>
+      </ul>
+      <p>&copy; 2010-2020 Компания «Техномарт» <br>
+        Все права защищены</p>
+      <ul>
+        <li><a href="#">Вконтакте</a></li>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Instagram</a></li>
+      </ul>
+      <p>Обратная связь</p>
+      <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+      <p>Разработано -</p>
+      <a href="https://htmlacademy.ru">htmlacademy.ru</a>
+    </footer>
   </body>
 </html>
