Исправлена разметка слайдеров
Исправлена разметка слайдеров.
Удалены переносы строк вне тегов.
Удалены <p>NEW</p> у товаров

--- a/blank.html
+++ b/blank.html
@@ -11,7 +11,7 @@
     <h1>Магазин строительных материалов и инструментов ТЕХНОМАРТ</h1>
     <section>
       <a href="index.html" class="logo">
-        <img src="" alt="ТЕХНОМАРТ" width="108" height="18">
+        <img src="https://via.placeholder.com/108x18" alt="ТЕХНОМАРТ" width="108" height="18">
       </a>
       <input type="search" name="search" id="search-field">
       <a href="blank.html">Закладки</a>
