Переделаны breadcumbs и pagination

--- a/catalog.html
+++ b/catalog.html
@@ -38,12 +38,20 @@
       </nav>
     </header>
     <main>
-      <div class="breadcrumbs">
-        <a href="index.html">Главная</a>
-        <a href="blank.html">Каталог</a>
-        <a href="blank.html">Инструмент</a>
-        <a href="#">Перфораторы</a>
-      </div>
+      <ul class="breadcrumbs">
+        <li>
+          <a href="index.html">Главная</a>
+        </li>
+        <li>
+          <a href="blank.html">Каталог</a>
+        </li>
+        <li>
+          <a href="blank.html">Инструмент</a>
+        </li>
+        <li>
+          <a href="#">Перфораторы</a>
+        </li>
+      </ul>
       <section>
         <h2>Перфораторы</h2>
         <div class="catalog">
@@ -119,12 +127,20 @@
               <a href="blank.html">12500 Р.</a>
             </li>
           </ul>
-          <div class="pagination">
-            <a href="#">1</a>
-            <a href="blank.html">2</a>
-            <a href="blank.html">3</a>
-            <a href="blank.html">Следующая</a>
-          </div>
+          <ul class="pagination">
+            <li>
+              <a href="#">1</a>
+            </li>
+            <li>
+              <a href="blank.html">2</a>
+            </li>
+            <li>
+              <a href="blank.html">3</a>
+            </li>
+            <li>
+              <a href="blank.html">Следующая</a>
+            </li>
+          </ul>
         </div>
       </section>
       <section>
