Исправлена разметка блока сортировки товаров

--- a/catalog.html
+++ b/catalog.html
@@ -55,23 +55,14 @@
       <section>
         <h2>Перфораторы</h2>
         <div class="catalog">
-          <!--блок с кнопками сортировки товаров-->
           <div class="sortby">
             <p>СОРТИРОВКА</p>
-            <input type="radio" name="sortby-1" id="byprice" value="byprice" checked>
-            <input type="radio" name="sortby-1" id="bytype" value="bytype">
-            <input type="radio" name="sortby-1" id="byfunction" value="byfunction">
-            <div class="sortby-1-controls">
-              <label for="byprice">По цене</label>
-              <label for="bytype">По типу</label>
-              <label for="byfunction">По функционалу</label>
-            </div>
-            <input type="radio" name="sortby-2" id="increase" value="increase" checked>
-            <input type="radio" name="sortby-2" id="decrease" value="decrease">
-            <div class="sortby-2-controls">
-              <label for="increase">По возрастанию</label>
-              <label for="decrease">По убыванию</label>
-            </div>
+            <a href="#"></a>
+            <a href="blank.html">По цене</a>
+            <a href="blank.html">По типу</a>
+            <a href="blank.html">По функционалу</a>
+            <a href="blank.html">По возрастанию</a>
+            <a href="blank.html">По убыванию</a>
           </div>
           <ul>
             <li>
