Сетка на гридах для внутренней страницы

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       <a href="blank.html" class="header-btn btn-login">Войти</a>
       <a href="blank.html" class="header-btn btn-registration">Регистрация</a>
     </section>
-    <nav class="main-navigation container">
+    <div class="container">
+      <nav class="main-navigation">
       <ul class="site-navigation">
         <li class="navigation-item">
           <a class="navigation-link">Главная</a>
@@ -56,6 +57,8 @@
         </li>
       </ul>
     </nav>
+    </div>
+
   </header>
   <main>
     <section class="catalog container">
