--- a/blank.html
+++ b/blank.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="page" lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -11,27 +11,30 @@
   <title>HTML Academy: Техномарт</title>
 </head>
 
-<body>
+<body class="page-body">
   <!--Пустая страница с хедером и футером-->
   <header class="header">
     <h1 class="visually-hidden">Магазин строительных материалов и инструментов ТЕХНОМАРТ</h1>
     <section class="header-top">
-      <a href="index.html" class="logo">
-        <img src="img/logo.svg" alt="ТЕХНОМАРТ" width="108" height="18">
-      </a>
-      <input type="search" class="search-field" name="search" id="search-field" placeholder="Поиск:">
-      <a href="blank.html" class="header-top-link header-bookmarks">Закладки:0</a>
-      <a href="blank.html" class="header-top-link header-cart">Корзина:0</a>
-      <a href="blank.html" class="header-top-link header-ordering">Оформить заказ</a>
+      <div class="header-top-menu container">
+        <a href="index.html" class="logo">
+          <img src="img/logo.svg" alt="Логотип ТЕХНОМАРТ" width="108" height="18">
+        </a>
+        <input type="search" class="search-field" name="search" id="search-field" placeholder="Поиск:">
+        <a href="blank.html" class="header-top-link header-bookmarks">Закладки: 0</a>
+        <a href="blank.html" class="header-top-link header-cart">Корзина: 0</a>
+        <a href="blank.html" class="header-top-link header-ordering">Оформить заказ</a>
+      </div>
     </section>
-    <section class="header-middle">
+    <section class="header-middle container">
       <p class="header-text">Интернет-магазин <br>строительных материалов <br>и инструментов для ремонта</p>
       <a href="tel:+78125550555" class="header-phone">+7 (812) 555-05-55</a>
       <address class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
       <a href="blank.html" class="header-btn btn-login">Войти</a>
       <a href="blank.html" class="header-btn btn-registration">Регистрация</a>
     </section>
-    <nav class="main-navigation">
+    <div class="container">
+      <nav class="main-navigation">
       <ul class="site-navigation">
         <li class="navigation-item">
           <a href="index.html" class="navigation-link">Главная</a>
@@ -56,68 +59,74 @@
         </li>
       </ul>
     </nav>
+    </div>
   </header>
-  <main>
+  <main class="container">
     <h1>Пустая страница</h1>
     <p>Эта страница ещё не заполнена</p>
   </main>
   <footer class="page-footer main-footer">
     <div class="footer-top">
-      <a href="index.html" class="logo">
-        <img src="img/logo.svg" alt="ТЕХНОМАРТ" width="108" height="18">
-      </a>
-      <address class="footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
-      <a href="tel:+78125550555" class="footer-phone">+7 (812) 555-05-55</a>
-      <ul class="footer-navigation-list">
-        <li class="footer-navigation-item">
-          <a href="blank.html" class="footer-navigation-link">Компания</a>
-        </li>
-        <li class="footer-navigation-item">
-          <a href="blank.html" class="footer-navigation-link">Новости</a>
-        </li>
-        <li class="footer-navigation-item">
-          <a href="blank.html" class="footer-navigation-link">Каталог</a>
-        </li>
-        <li class="footer-navigation-item">
-          <a href="blank.html" class="footer-navigation-link">Доставка</a>
-        </li>
-        <li class="footer-navigation-item">
-          <a href="blank.html" class="footer-navigation-link">Контакты</a>
-        </li>
-      </ul>
-      <ul class="footer-catalog-list">
-        <li class="footer-catalog-item">
-          <a href="blank.html" class="footer-catalog-link">Материалы</a>
-        </li>
-        <li class="footer-catalog-item">
-          <a href="blank.html" class="footer-catalog-link">Техника</a>
-        </li>
-        <li class="footer-catalog-item">
-          <a href="blank.html" class="footer-catalog-link">Инструмент</a>
-        </li>
-        <li class="footer-catalog-item">
-          <a href="blank.html" class="footer-catalog-link">Спецпредложения</a>
-        </li>
-      </ul>
+      <div class="grid-footer-top container">
+        <a href="index.html" class="logo-footer">
+          <img src="img/logo-footer.svg" alt="ТЕХНОМАРТ" width="138" height="23">
+        </a>
+        <address class="footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+        <a href="tel:+78125550555" class="footer-phone">+7 (812) 555-05-55</a>
+        <ul class="footer-navigation-list">
+          <li class="footer-navigation-item">
+            <a href="blank.html" class="footer-navigation-link">Компания</a>
+          </li>
+          <li class="footer-navigation-item">
+            <a href="blank.html" class="footer-navigation-link">Новости</a>
+          </li>
+          <li class="footer-navigation-item">
+            <a href="catalog.html" class="footer-navigation-link">Каталог</a>
+          </li>
+          <li class="footer-navigation-item">
+            <a href="blank.html" class="footer-navigation-link">Доставка</a>
+          </li>
+          <li class="footer-navigation-item">
+            <a href="blank.html" class="footer-navigation-link">Контакты</a>
+          </li>
+        </ul>
+        <ul class="footer-catalog-list">
+          <li class="footer-catalog-item">
+            <a href="blank.html" class="footer-catalog-link">Материалы</a>
+          </li>
+          <li class="footer-catalog-item">
+            <a href="blank.html" class="footer-catalog-link">Техника</a>
+          </li>
+          <li class="footer-catalog-item">
+            <a href="blank.html" class="footer-catalog-link">Инструмент</a>
+          </li>
+          <li class="footer-catalog-item">
+            <a href="blank.html" class="footer-catalog-link">Спецпредложения</a>
+          </li>
+        </ul>
+      </div>
     </div>
+
     <div class="footer-bottom">
-      <p class="footer-copyright">&copy; 2010-2020 Компания «Техномарт» <br>
-        Все права защищены</p>
-      <ul class="footer-social-list">
-        <li class="footer-social-item">
-          <a class="footer-social-link">Вконтакте</a>
-        </li>
-        <li class="footer-social-item">
-          <a class="footer-social-link">Facebook</a>
-        </li>
-        <li class="footer-social-item">
-          <a class="footer-social-link">Instagram</a>
-        </li>
-      </ul>
-      <p class="footer-contacts-text footer-email">Обратная связь</p>
-      <a href="mail@htmlacademy.ru" class="footer-contacts-link footer-email">mail@htmlacademy.ru</a>
-      <p class="footer-contacts-text footer-develop">Разработано -</p>
-      <a href="https://htmlacademy.ru" class="footer-contacts-link footer-develop">htmlacademy.ru</a>
+      <div class="grid-footer-bottom container">
+        <p class="footer-copyright">&copy; 2010-2020 Компания «Техномарт» <br>
+          Все права защищены</p>
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="footer-social-link">Вконтакте</a>
+          </li>
+          <li class="footer-social-item">
+            <a class="footer-social-link">Facebook</a>
+          </li>
+          <li class="footer-social-item">
+            <a class="footer-social-link">Instagram</a>
+          </li>
+        </ul>
+        <p class="footer-contacts-text footer-email">Обратная связь</p>
+        <a href="mail@htmlacademy.ru" class="footer-contacts-link footer-email">mail@htmlacademy.ru</a>
+        <p class="footer-contacts-text footer-develop">Разработано -</p>
+        <a href="https://htmlacademy.ru" class="footer-contacts-link footer-develop">htmlacademy.ru</a>
+      </div>
     </div>
   </footer>
 </body>
