--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
         <a class="logo">
           <img src="img/logo.svg" alt="Логотип ТЕХНОМАРТ" width="108" height="18">
         </a>
-        <input type="search" class="search-field" name="search" id="search-field" placeholder="Поиск:">
+        <label class="header-search-field">
+          <input type="search" class="search-field" name="search" id="search-field" placeholder="Поиск:">
+          <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none">
+            <g opacity="0.3">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z" fill="white"/>
+            </g>
+            </svg>
+        </label>
         <a href="blank.html" class="header-top-link header-bookmarks">Закладки: 0</a>
         <a href="blank.html" class="header-top-link header-cart">Корзина: 0</a>
         <a href="blank.html" class="header-top-link header-ordering">Оформить заказ</a>
@@ -31,7 +38,13 @@
         <address class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
       </div>
       <div class="header-middle-buttons">
-        <a href="blank.html" class="header-btn btn-login">Войти</a>
+        <a href="blank.html" class="header-btn btn-login">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17" fill="none">
+            <path d="M14.1667 8.5L5.71429 0V6H0V11H5.71429V17L14.1667 8.5Z" fill="#C5C5C5"/>
+            <path d="M16.1771 15.01H11.3895V17H16.1771C18.2514 17 19.0381 15.19 19.0619 13.974V3.028C19.0381 1.811 18.2514 0 16.1771 0H11.3895V1.99H16.1771C16.9762 1.99 17.1219 2.671 17.1391 3.047V13.951C17.1229 14.327 16.9762 15.01 16.1771 15.01Z" fill="#C5C5C5"/>
+            </svg>
+          Войти
+        </a>
         <a href="blank.html" class="header-btn btn-registration">Регистрация</a>
       </div>
     </section>
@@ -126,7 +139,7 @@
         <a href="blank.html" class="btn btn-product">Все популярные товары</a>
       </div>
       <ul class="product-list">
-        <li class="product-item product-item-main">
+        <li class="product-item">
           <div class="product-hover">
             <a href="blank.html" class="btn-green">Купить</a>
             <a href="blank.html" class="btn-green-border">В закладки</a>
@@ -135,10 +148,10 @@
             <img src="img/snippet-32961.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
           </div>
             <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 9000</a>
-            <p class="product-old-price-p"><del class="product-old-price">32500 Р.</del></p>
+            <p class="product-old-price"><del>32500 Р.</del></p>
             <p class="product-price">25500 Р.</p>
         </li>
-        <li class="product-item new product-item-main">
+        <li class="product-item new">
           <div class="product-hover">
             <a href="blank.html" class="btn-green">Купить</a>
             <a href="blank.html" class="btn-green-border">В закладки</a>
@@ -147,10 +160,10 @@
             <img src="img/snippet-18927.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
           </div>
             <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 3000</a>
-            <p class="product-old-price-p"><del class="product-old-price">22500 Р.</del></p>
+            <p class="product-old-price"><del">22500 Р.</del></p>
             <p class="product-price">15500 Р.</p>
         </li>
-        <li class="product-item product-item-main">
+        <li class="product-item">
           <div class="product-hover">
             <a href="blank.html" class="btn-green">Купить</a>
             <a href="blank.html" class="btn-green-border">В закладки</a>
@@ -159,10 +172,10 @@
             <img src="img/snippet-945.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
           </div>
             <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 6000</a>
-            <p class="product-old-price-p"><del class="product-old-price">30500 Р.</del></p>
+            <p class="product-old-price"><del>30500 Р.</del></p>
             <p class="product-price">25500 Р.</p>
         </li>
-        <li class="product-item product-item-main new">
+        <li class="product-item new">
           <div class="product-hover">
             <a href="blank.html" class="btn-green">Купить</a>
             <a href="blank.html" class="btn-green-border">В закладки</a>
@@ -224,7 +237,7 @@
       </ul>
     </section>
     <section class="services">
-      <div class="services-inner container-960">
+      <div class="services-inner container">
         <h2 class="section-title">Сервисы</h2>
         <p class="section-text">Хороший интернет-магазин отличается от плохого не только ценами!<br>
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
@@ -347,13 +360,19 @@
           Все права защищены</p>
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a class="footer-social-link social-link-vk"></a>
+            <a class="footer-social-link social-link-vk">
+              <span class="visually-hidden">Вконтакте</span>
+            </a>
           </li>
           <li class="footer-social-item">
-            <a class="footer-social-link social-link-fb"></a>
+            <a class="footer-social-link social-link-fb">
+              <span class="visually-hidden">Facebook</span>
+            </a>
           </li>
           <li class="footer-social-item">
-            <a class="footer-social-link social-link-in"></a>
+            <a class="footer-social-link social-link-in">
+              <span class="visually-hidden">Instagram</span>
+            </a>
           </li>
         </ul>
         <div class="footer-bottom-right">
