--- a/index.html
+++ b/index.html
@@ -195,42 +195,42 @@
       <ul class="brands-list">
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="img/bosch.png" class="brand-image" width="126" height="37" alt="BOSCH">
+            <img src="img/bosch-logo.png" class="brand-image" width="126" height="37" alt="BOSCH">
           </a>
         </li>
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="img/makita.png" class="brand-image" width="123" height="40" alt="Makita">
+            <img src="img/makita-logo.png" class="brand-image" width="123" height="40" alt="Makita">
           </a>
         </li>
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="img/dewalt.png" class="brand-image" width="146" height="44" alt="DeWALT">
+            <img src="img/dewalt-logo.png" class="brand-image" width="146" height="44" alt="DeWALT">
           </a>
         </li>
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="img/interskol.png" class="brand-image" width="200" height="76" alt="Интерскол">
+            <img src="img/interskol-logo.png" class="brand-image" width="200" height="76" alt="Интерскол">
           </a>
         </li>
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="img/hitachi.png" class="brand-image" width="169" height="31" alt="Hitachi">
+            <img src="img/hitachi-logo.png" class="brand-image" width="169" height="31" alt="Hitachi">
           </a>
         </li>
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="img/lg.png" class="brand-image" width="121" height="73" alt="LG">
+            <img src="img/lg-logo.png" class="brand-image" width="121" height="73" alt="LG">
           </a>
         </li>
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="img/aeg.png" class="brand-image" width="151" height="98" alt="AEG">
+            <img src="img/aeg-logo.png" class="brand-image" width="151" height="98" alt="AEG">
           </a>
         </li>
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="img/metabo.png" class="brand-image" width="206" height="63" alt="metabo">
+            <img src="img/metabo-logo.png" class="brand-image" width="206" height="63" alt="metabo">
           </a>
         </li>
       </ul>
